project(
    'Project Euler',
    'cpp',
    default_options: ['cpp_std=c++20']
)

executable('problem044', 'src/problem044.cpp')
executable('problem045', 'src/problem045.cpp')
executable('problem046', 'src/problem046.cpp')
executable('problem047', 'src/problem047.cpp')
executable('problem048', 'src/problem048.cpp')
executable('problem049', 'src/problem049.cpp')
